@@ -4,7 +4,9 @@ Changelog
 3.6.1 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Applying localization for jWuery.dateinput
+  at document ready is too late
+  [ale-rt]
 
 
 3.6.0 (2016-03-15)
